--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,13 +9,12 @@ import Footer from '../sections/Footer.astro';
 ---
 
 <Layout title="Mauricio Mosse">
-	<main class="w-full h-full">
+	<main class="w-full">
 		<Hero />
 		<About />
 		<Products />
 		<CTA />
 		<Faq />
-		<Footer />
 	</main>
 </Layout>
 
