--- a/src/components/navbar/Navbar.astro
+++ b/src/components/navbar/Navbar.astro
@@ -6,24 +6,24 @@ const currentPath = pathname.slice(1)
 ---
 
 
-<nav class="border-gray-200 dark:bg-gray-900 shadow-lg">
+<nav class="border-gray-200 dark:bg-gray-900 lg:shadow-lg relative z-50">
   <div class="w-full flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="/public/Logo.svg" class="h-8" alt="Flowbite Logo" />
+        <img src="/Logo.svg" class="h-8" alt="Flowbite Logo" />
     </a>
-    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex  items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
         </svg>
     </button>
-    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-      <ul class="font-medium nav-container flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+    <div class="hidden w-full md:mt-2  lg:mt-0 lg:block lg:w-auto" id="navbar-default">
+      <ul class="font-medium nav-container flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-white md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
          {navbarItems.map(item=>(
            <li>
             {
-             item  === "Quienes Somos" ? <a href={`/Quienes-Somos`} class={`nav-link block py-2 px-3 font-semibold  bg-blue-400 rounded md:bg-transparent ${currentPath === 'Quienes-Somos' ? "text-blue-600" : "text-gray-600 "} `} aria-current="page">{item}</a>
-               : <a href={`/${item}`} class={`nav-link block py-2 px-3 font-semibold  bg-blue-400 rounded md:bg-transparent ${currentPath === item ? "text-blue-600" : "text-gray-600 "} `} aria-current="page">{item === "" ? "Inicio" : item}</a>
+             item  === "Quienes Somos" ? <a href={`/Quienes-Somos`} class={`nav-link block py-2 px-3 font-semibold rounded md:bg-transparent ${currentPath === 'Quienes-Somos' ? "text-blue-600" : "text-gray-600 "} `} aria-current="page">{item}</a>
+               : item === "Medicina del Hogar" ? <a href={`/Medicina-del-Hogar`} class={`nav-link block py-2 px-3 font-semibold rounded md:bg-transparent ${currentPath === 'Medicina-del-Hogar' ? "text-blue-600" : "text-gray-600 "} `} aria-current="page">{item}</a>  : <a href={`/${item}`} class={`nav-link block py-2 px-3 font-semibold  rounded md:bg-transparent ${currentPath === item ? "text-blue-600" : "text-gray-600 "} `} aria-current="page">{item === "" ? "Inicio" : item}</a>
             }
          
           </li>
