--- a/src/pages/Contacto.astro
+++ b/src/pages/Contacto.astro
@@ -4,101 +4,75 @@ import Layout from "../layouts/Layout.astro"
 import Phone from "../../public/phone.svg"
 import Email from "../../public/email.svg"
 import Location from "../../public/location.svg"
+import Business from "../../public/business.svg"
+
+import { MapComponent } from "../components/Map"
+
 
 interface Contact{
     icon:ImageMetadata,
-    contact:string
+    contact:string,
+    title:string
 }
 
     const contactMethods:Contact[] = [
         {
+            title:"Email",
             icon:Email,
-            contact: "Support@example.com"
+            contact: "ventas1@mmosse.com.ar"
         },
         {
+            title:"Telefono",
             icon:Phone,
             contact: "+1 (555) 000-000"
         },
         {
+            title:"Atencion al Cliente",
             icon:Location,
-            contact: "Mountain View, California, United State."
+            contact: "San Juan 313, SMT."
+        },
+         {
+            title:"Atencion a Empresas",
+            icon:Business,
+            contact: "Pje Río de Janeiro 50, SMT"
         },
     ]
 ---
           <Layout title="Contactanos">
             <section class="py-14 px-4">
-            <div class="w-full mx-auto  text-gray-600 md:px-8">
-                <div class="max-w-lg mx-auto gap-12 justify-between lg:flex lg:max-w-none">
-                    <div class="max-w-lg space-y-3">
-                        <p class="text-gray-800 text-3xl font-semibold sm:text-4xl">
-                            Let us know how we can help
-                        </p>
-                        <p>
-                            We’re here to help and answer any question you might have, We look forward to hearing from you! Please fill out the form, or us the contact information bellow .
-                        </p>
+            <div class="w-full mx-auto text-gray-600 md:px-8">
+                <div class="max-w-lg mx-auto gap-12 lg:flex lg:max-w-none">
+                    <div class="w-full space-y-3 flex items-center justify-between">
+                        <div class="max-w-lg">
+                            <p class="text-gray-800 text-3xl font-semibold sm:text-4xl mb-4">
+                                Let us know how we can help
+                            </p>
+                            <p>
+                                We’re here to help and answer any question you might have, We look forward to hearing from you! Please fill out the form, or us the contact information bellow .
+                            </p>
+                        </div>
                         <div>
-                            <ul class="mt-6 flex flex-wrap gap-x-10 gap-y-6 items-center">
+                            <ul class="mt-12 grid grid-cols-2 gap-4">
                                 {
                                     contactMethods.map((item) => (
-                                        <li class="flex items-center gap-x-3">
-                                            <img src={item.icon.src} alt="">
+                                        <li>
+                                            <h4 class="text-gray-800 text-lg font-medium">{item.title}</h4>
+                                            <div class="mt-3 flex items-center gap-x-3">
+                                            <img  class="w-6 h-6" src={item.icon.src} alt="">
                                             <p>{item.contact}</p>
+                                            </div>
                                         </li>
                                     ))
                                 }
                             </ul>
                         </div>
                     </div>
-                    <div class="flex-1 mt-12 sm:max-w-lg lg:max-w-md">
-                        <form
-                            class="space-y-5"
-                        >
-                            <div>
-                                <label class="font-medium">
-                                    Full name
-                                </label>
-                                <input
-                                    type="text"
-                                    required
-                                    class="w-full mt-2 px-3 py-2 text-gray-500 bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg"
-                                />
-                            </div>
-                            <div>
-                                <label class="font-medium">
-                                    Email
-                                </label>
-                                <input
-                                    type="email"
-                                    required
-                                    class="w-full mt-2 px-3 py-2 text-gray-500 bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg"
-                                />
-                            </div>
-                            <div>
-                                <label class="font-medium">
-                                    Company
-                                </label>
-                                <input
-                                    type="text"
-                                    required
-                                    class="w-full mt-2 px-3 py-2 text-gray-500 bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg"
-                                />
-                            </div>
-                            <div>
-                                <label class="font-medium">
-                                    Message
-                                </label>
-                                <textarea required class="w-full mt-2 h-36 px-3 py-2 resize-none appearance-none bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg"></textarea>
-                            </div>
-                            <button
-                                class="w-full px-4 py-2 text-white font-medium bg-indigo-600 hover:bg-indigo-500 active:bg-indigo-600 rounded-lg duration-150"
-                            >
-                                Submit
-                            </button>
-                        </form>
-                    </div>
                 </div>
+                <MapComponent client:only />
             </div>
         </section>
         </Layout>
+      
 
+        </style>
         
