--- a/src/pages/Quienes-Somos.astro
+++ b/src/pages/Quienes-Somos.astro
@@ -1,23 +1,32 @@
 
-
 ---
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout title="Quienes Somos">
     <section class="w-full">
-        <div class="bg-gray-50 p-16 w-full h-[26rem] flex flex-col justify-center  ">
-            <div class="flex items-center justify-between w-[85%] ">
-                <div class="flex flex-col gap-8">
-                    <h1 class="text-4xl font-bold">Quienes Somos?</h1>
-                    <p class="max-w-[450px] pl-2 text-lg font-light ">HubSpot’s company and culture are a lot like our product. They’re crafted, not cobbled, for a delightful experience.</p>
+        <div class="bg-gray-50 p-5 lg:p-5 w-full lg:h-fit">
+            <div class="flex flex-col gap-2 lg:flex-row lg:items-center object-cover lg:justify-between w-full  lg:w-[80rem]  ">
+                <div class="flex flex-col gap-2 lg:gap-8">
+                    <h1 class="text-4xl font-bold text-blue-900">Quienes Somos?</h1>
+                    <p class="max-w-[450px] md:pl-2 text-lg font-light ">HubSpot’s company and culture are a lot like our product. They’re crafted, not cobbled, for a delightful experience.</p>
                 </div>
-                <img src="/public/photo.jpg" class=" w-[22rem] " alt="" >
+                <img src="/public/photo.jpg" class=" w-full lg:w-[26rem] " alt="" >
             </div>
         </div>
-        <div class="flex gap-10 px-5 py-5 items-center mt-20">
-            <img src="/public/photo.jpg" class="flex-1 w-56" alt="" >
+        <div class="flex flex-col gap-5 px-3 lg:flex-row lg:gap-10 lg:px-5 lg:py-5 items-center justify-center mt-20">
             <div class="flex-1">
-                <h2 class="text-3xl font-bold">Nuestra Misión</h2>
+                <h2 class="text-3xl font-bold text-blue-900">Nuestra Misión</h2>
+                <p class="text-lg font-light tracking-tight text-gray-500 mt-5">
+                  Incorporamos profesionales del medio como asesores técnicos y comerciales para dar a nuestros clientes amplias posibilidades de crecimiento laboral y optimización tecnológica en sus desarrollos personales.
+                  Nos distingue nuestro servicio de entrega puerta a puerta y un stock permanente de productos esenciales para la Salud, priorizando la urgencia del profesional y la vida de las personas.
+                  Brindamos asesoramiento en equipamiento e insumos para el desarrollo laboral de nuestros clientes bioquímicos, lo que les permite optimizar sus recursos tecnológicos al menor costo posible, atendiendo al financiamiento económico que requieren para su crecimiento y modernización, siempre con los planes y comodidades que “Mauricio Mossé Instrumental Científico” hizo llegar a generaciones de bioquímicos y ahora “Mauricio Mossé – Soluciones Integrales para Laboratorios” continúa.
+                </p>
+            </div>
+            <img src="/public/photo.jpg" class="flex-1 w-full lg:w-[50%] polygon1" alt="" >
+        </div>
+        <div class="flex flex-col gap-5 px-3 bg-gray-50 lg:flex-row lg:gap-10 lg:px-5 lg:py-5 items-center justify-center mt-20">
+            <div class="flex-1">
+                <h2 class="text-3xl font-bold text-blue-900">Nuestra Historia</h2>
                 <p class="text-lg font-light tracking-tight text-gray-500 mt-5">
                     Nuestra empresa es el resultado del trabajo continuo y el esfuerzo de Mauricio Mossé en sus más de cuarenta años de trabajo.
 
@@ -28,21 +37,7 @@ import Layout from "../layouts/Layout.astro"
                     Nos distingue nuestro servicio de entrega puerta a puerta y un stock permanente de productos esenciales para la Salud, priorizando la urgencia del profesional y la vida de las personas.
                 </p>
             </div>
-        </div>
-        <div class="flex items-center px-5 gap-10 mt-20">
-            <div class="flex-1">
-                <h2 class="text-3xl font-bold">Nuestra Historia</h2>
-                <p class="text-lg font-light tracking-tight text-gray-500 mt-5">
-                    Nuestra empresa es el resultado del trabajo continuo y el esfuerzo de Mauricio Mossé en sus más de cuarenta años de trabajo.
-
-                    Hoy ampliamos nuestra cartera de productos, proveedores y servicios para brindar una atención integral en Bioquímica, Medicina y Salud en general.
-                    
-                    Incorporamos profesionales del medio como asesores técnicos y comerciales para dar a nuestros clientes amplias posibilidades de crecimiento laboral y optimización tecnológica en sus desarrollos personales.
-                    
-                    Nos distingue nuestro servicio de entrega puerta a puerta y un stock permanente de productos esenciales para la Salud, priorizando la urgencia del profesional y la vida de las personas.
-                </p>
-            </div>
-            <img src="/public/photo.jpg" class="flex-1 w-56" alt="" >
+            <img src="/public/photo.jpg" class="flex-1 w-full lg:w-[50%]  md:p-3 polygon" alt="" >
         </div>
     </section>
     <section>
@@ -52,17 +47,17 @@ import Layout from "../layouts/Layout.astro"
             </div>
             <div class="flex flex-col flex-wrap lg:py-6 -mb-10 lg:w-1/2 lg:pl-12 lg:text-left text-center">
                 <h2 class="text-3xl font-bold my-10">Nuestros Valores</h2>
-              <div class="flex flex-col mb-10 lg:items-start items-center">
+              <div class="flex flex-col mb-10 lg:items-start  items-center">
                 <div class="w-12 h-12 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-5">
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
                     <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
                   </svg>
                 </div>
                 <div class="flex-grow">
-                  <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Escuchamos, pensamos y queremos lo mejor para el Cliente.</h2>
+                  <h2 class="text-gray-900 text-lg title-font font-light mb-3">Escuchamos, pensamos y queremos lo mejor para el Cliente.</h2>
                 </div>
               </div>
-              <div class="flex flex-col mb-10 lg:items-start items-center">
+              <div class="flex flex-col mb-10 lg:items-start  items-center">
                 <div class="w-12 h-12 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-5">
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
                     <circle cx="6" cy="6" r="3"></circle>
@@ -71,10 +66,10 @@ import Layout from "../layouts/Layout.astro"
                   </svg>
                 </div>
                 <div class="flex-grow">
-                  <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Soluciones satisfactorias siempre.</h2>
+                  <h2 class="text-gray-900 text-lg title-font font-light mb-3">Soluciones satisfactorias siempre.</h2>
                 </div>
               </div>
-              <div class="flex flex-col mb-10 lg:items-start items-center">
+              <div class="flex flex-col mb-10 lg:items-start  items-center">
                 <div class="w-12 h-12 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-5">
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
                     <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
@@ -82,10 +77,10 @@ import Layout from "../layouts/Layout.astro"
                   </svg>
                 </div>
                 <div class="flex-grow">
-                  <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Productos de Calidad confirmada.</h2>
+                  <h2 class="text-gray-900 text-lg title-font font-light mb-3">Productos de Calidad confirmada.</h2>
                 </div>
               </div>
-              <div class="flex flex-col mb-10 lg:items-start items-center">
+              <div class="flex flex-col mb-10 lg:items-start  items-center">
                 <div class="w-12 h-12 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-5">
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
                     <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
@@ -93,10 +88,25 @@ import Layout from "../layouts/Layout.astro"
                   </svg>
                 </div>
                 <div class="flex-grow">
-                  <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Servicio serio y profesional todos los días.</h2>
+                  <h2 class="text-gray-900 text-lg title-font font-light mb-3">Servicio serio y profesional todos los días.</h2>
                 </div>
               </div>
             </div>
           </div>
     </section>
 </Layout>
+
+<!-- <style>
+  .polygon{
+    clip-path: polygon(50% 0%, 100% 0, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 0 100%, 0% 43%, 17% 12%);
+  }
+  .polygon1{
+    clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 100% 100%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 0 0);
+  }
+
+  @media(width <= 1024px){
+    .polygon,.polygon1{
+      clip-path: none;
+    }
+  }
+</style> -->
