--- a/src/sections/About.astro
+++ b/src/sections/About.astro
@@ -1,13 +1,10 @@
 
-<section class="w-full pl-3 flex justify-between ">
-    <div class="pl-4 pt-4 flex flex-col items-start justify-center ">
-        <h2 class="font-bold text-blue-900 text-5xl max-w-[550px] ">Donde la ciencia se encuentra con la innovación.</h2>
-        <p class="text-sm font-light text-gray-500 mt-3 text-balance max-w-[550px] ">Nos especializamos en la investigación de vanguardia, impulsando descubrimientos que transforman industrias y mejoran vidas.</p>
+<section class="w-full lg:pl-3 flex lg:justify-between lg:flex-row flex-col items-center gap-2 ">
+    <div class="lg:pl-4 lg:pt-4 p-10 flex flex-col items-center justify-center lg:items-start ">
+        <h2 class="font-bold text-blue-900 text-center lg:text-start md:text-5xl text-2xl w-full md:max-w-[550px] ">Donde la ciencia se encuentra con la innovación.</h2>
+        <p class="text-lg font-light text-gray-500 mt-3 text-balance md:max-w-[570px] text-center lg:text-start ">Nos especializamos en la investigación de vanguardia, impulsando descubrimientos que transforman industrias y mejoran vidas.</p>
         <button type="button" class="text-white mt-5 w-fit bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
             Conoce mas
-            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-            </svg>
         </button>
     </div>
     <img src="https://plus.unsplash.com/premium_photo-1661284886645-1e21653e252a?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
@@ -15,8 +12,14 @@
 
 <style>
     img{
-        width: 600px;
+        width: 800px;
         height: auto;
         clip-path: polygon(25% 0%, 100% 0, 100% 100%, 0 100%);
+    }
+    @media(width <= 1024px){
+          img{
+            clip-path: none;
+            border-radius: 10px;
+          }
     }
 </style>
