--- a/src/sections/CTA.astro
+++ b/src/sections/CTA.astro
@@ -12,7 +12,7 @@
             </p>
         </div>
         <div class="mt-4">
-            <a href="javascript:void(0)" class="btn">
+            <a href="/Contacto" class="btn">
                 <span>Contactanos</span>
             </a>
         </div>
