--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -2,28 +2,28 @@
    const footerNavs = [
         {
             href: 'javascript:void()',
-            name: 'About'
+            name: 'Inicio'
+        },
+        {
+            href: 'Quienes-Somos',
+            name: 'Quienes Somos'
         },
         {
             href: 'javascript:void()',
-            name: 'Blog'
+            name: 'Laboratorio'
         },
         {
             href: 'javascript:void()',
-            name: ''
+            name: 'Covatec'
         },
         {
             href: 'javascript:void()',
-            name: 'Team'
-        },
-        {
-            href: 'javascript:void()',
-            name: 'Careers'
+            name: 'Medicina del Hogar'
         },
 
         {
-            href: 'javascript:void()',
-            name: 'Suuport'
+            href: 'Contacto',
+            name: 'Contacto'
         }
     ]
 ---
@@ -40,7 +40,7 @@
     <ul class="items-center justify-center mt-8 space-y-5 sm:flex sm:space-x-4 sm:space-y-0">
         {
             footerNavs.map((item) => (
-                <li class=" hover:text-red-800">
+                <li class=" hover:font-bold font-light ">
                     <a  href={item.href}>
                         { item.name }
                     </a>
