--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -1,15 +1,13 @@
 
 
-<section class="relative flex flex-col items-start justify-center w-full h-[32rem] overflow-hidden ">
-    <div class="flex flex-col w-[28rem] gap-4 pl-4 ">
-        <h1 class="text-white font-bold text-6xl">Haciendo el futuro posible</h1>
-        <button type="button" class="text-white w-fit bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+<section class="relative flex flex-col items-start justify-center p-10 lg:p-0 w-full h-fit aspect-[20/9]  overflow-hidden ">
+    <div class="flex flex-col lg:w-[28rem] w-full gap-4 lg:pl-4 items-center justify-center lg:items-start ">
+        <h1 class="text-white font-bold text-3xl md:text-6xl text-center lg:text-start">Haciendo el futuro posible</h1>
+        <p class="text-white text-lg font-light md:text-xl">Mas 40 años garantizando calidad</p>
+        <button type="button" class="text-white w-fit bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-6 py-3.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
             <span>Conoce mas</span>
-            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-            </svg>
         </button>
     </div>
-    <video class="aspect-[20/9] -z-20 w-full object-cover absolute top-0 left-0" autoplay loop muted src="../../public/video.mp4"></video>
-    <div class="w-full aspect-[20/9] bg-[rgb(0,0,0,0.3)] absolute top-0 left-0 -z-10 "/>
+    <video class="lg:aspect-[20/9] aspect-video -z-20 w-full object-cover absolute top-0 left-0" autoplay loop muted src="/video.mp4"></video>
+    <div class="w-full lg:aspect-[20/9] aspect-video bg-[rgb(0,0,0,0.3)] absolute top-0 left-0 -z-10 "/>
 </section>
