fix image problem

--- a/src/pages/Quienes-Somos.astro
+++ b/src/pages/Quienes-Somos.astro
@@ -10,7 +10,7 @@ import Layout from "../layouts/Layout.astro"
                     <h1 class="text-4xl font-bold text-blue-900">Quienes Somos?</h1>
                     <p class="max-w-[450px] md:pl-2 text-lg font-light ">HubSpot’s company and culture are a lot like our product. They’re crafted, not cobbled, for a delightful experience.</p>
                 </div>
-                <img src="/public/photo.jpg" class=" w-full lg:w-[26rem] " alt="" >
+                <img src="/photo.jpg" class=" w-full lg:w-[26rem] " alt="" >
             </div>
         </div>
         <div class="flex flex-col gap-5 px-3 lg:flex-row lg:gap-10 lg:px-5 lg:py-5 items-center justify-center mt-20">
@@ -22,7 +22,7 @@ import Layout from "../layouts/Layout.astro"
                   Brindamos asesoramiento en equipamiento e insumos para el desarrollo laboral de nuestros clientes bioquímicos, lo que les permite optimizar sus recursos tecnológicos al menor costo posible, atendiendo al financiamiento económico que requieren para su crecimiento y modernización, siempre con los planes y comodidades que “Mauricio Mossé Instrumental Científico” hizo llegar a generaciones de bioquímicos y ahora “Mauricio Mossé – Soluciones Integrales para Laboratorios” continúa.
                 </p>
             </div>
-            <img src="/public/photo.jpg" class="flex-1 w-full lg:w-[50%] polygon1" alt="" >
+            <img src="/photo.jpg" class="flex-1 w-full lg:w-[50%] polygon1" alt="" >
         </div>
         <div class="flex flex-col gap-5 px-3 bg-gray-50 lg:flex-row lg:gap-10 lg:px-5 lg:py-5 items-center justify-center mt-20">
             <div class="flex-1">
@@ -37,7 +37,7 @@ import Layout from "../layouts/Layout.astro"
                     Nos distingue nuestro servicio de entrega puerta a puerta y un stock permanente de productos esenciales para la Salud, priorizando la urgencia del profesional y la vida de las personas.
                 </p>
             </div>
-            <img src="/public/photo.jpg" class="flex-1 w-full lg:w-[50%]  md:p-3 polygon" alt="" >
+            <img src="/photo.jpg" class="flex-1 w-full lg:w-[50%]  md:p-3 polygon" alt="" >
         </div>
     </section>
     <section>
