Fixed react problem

--- a/src/pages/Laboratorio.astro
+++ b/src/pages/Laboratorio.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Laboratorio">
-   <ProductLayout client:only>
+   <ProductLayout client:only="react">
         <!-- <div class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
             <a href="#" class="container " >
                 <img class="rounded-t-lg" src="https://mauriciomosse.com.ar/wp-content/uploads/2022/11/contador-XS-20-WIENER.jpg" alt="" />
